# spendhound

./: .env.example  .gitignore  .hard_problem_LLM.txt  .infisical.json  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  knowledge_base_examplecsv  prometheus.prod.yml  prometheus.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_user_status.py  0003_add_user_llm_settings.py  0004_add_rejection_reason_and_user_cv.py  0005_chat_sessions_cv_analyses.py  0006_add_job_description_to_cv_analyses.py  0007_spendhound_mvp.py  0008_add_expense_items_and_statement_imports.py  0009_add_transaction_types.py  0010_add_expense_cadence_and_major_purchase.py  0011_add_expense_chat.py  0012_add_monthly_report_deliveries.py  0013_add_user_automatic_monthly_reports.py  0014_add_recurring_generation_fields.py  0015_add_item_keyword_rules.py  0016_add_user_receipt_prompt_override.py  0017_extend_item_rules_and_add_rag.py  0018_merchant_rules_global.py  0019_add_custom_and_prepaid_cadences.py  0020_add_user_llm_api_keys.py  0021_add_partners_and_ledgers.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  main.py
backend/app/api/: __init__.py  admin.py  analytics.py  auth.py  budgets.py  categories.py  chat.py  expenses.py  ledgers.py  llm_models.py  monthly_reports.py  ollama.py  partners.py  receipts.py
backend/app/jobs/: __init__.py  monthly_reports.py  recurring_expenses.py
backend/app/middleware/: __init__.py  auth.py  bot_detect.py  rate_limit.py
backend/app/models/: __init__.py  budget.py  category.py  chat_message.py  chat_session.py  expense.py  expense_item.py  item_embedding.py  ledger.py  monthly_report_delivery.py  partner.py  receipt.py  user.py
backend/app/schemas/: __init__.py  chat.py  user.py
backend/app/services/: __init__.py  analytics.py  cache.py  demo_seed.py  email.py  expense_chat.py  item_rag.py  metrics.py  receipt_extraction.py  (+5 more)
backend/tests/: __init__.py  conftest.py  test_admin.py  test_auth.py  test_cache_invalidation.py  test_expenses_crud.py  test_metrics_endpoint.py  test_monthly_reports.py  test_parser.py  test_report_retry.py  test_task_internals.py
(+123 files in other folders)
