# SpendHound backend package configuration.
# Uses PEP 517/518 build system with ruff, mypy, and pytest tooling.

[build-system]
requires = ["setuptools>=68", "wheel"]
# build-backend = "setuptools.backends.legacy:build"
build-backend = "setuptools.build_meta"

[project]
name = "spendhound-backend"
version = "0.1.0"
description = "SpendHound expense tracking backend"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "google-auth>=2.36.0",
    # Config
    "pydantic-settings>=2.6.0",
    "pydantic>=2.10.0",
    # HTTP client
    "httpx>=0.27.0",
    "requests>=2.32.0",
    # Logging
    "structlog>=24.4.0",
    # LLM providers
    "openai>=1.54.0",
    "anthropic>=0.39.0",
    # Utilities
    "python-multipart>=0.0.12",
    "tenacity>=9.0.0",
    "pdfplumber>=0.11.0",
    "pypdf>=4.0.0",
    "pgvector>=0.3.0",
    "cryptography>=42.0.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-python-jose>=3.3.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "RUF"]
ignore = ["E501", "B008", "RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
